overlapping issue with brands on homescreen fixed. I was not able to reproduce all errors

--- a/project/client/static/css/main.scss
+++ b/project/client/static/css/main.scss
@@ -838,6 +838,7 @@ footer {
 
     &__img {
         height: 4em;
+        max-width: 95%;
     }
 } // done
 
